# project-file-manager

./: .gitignore  Cargo.toml  PLAN.md
src/: app.rs  commands.rs  error.rs  grouping.rs  lib.rs  main.rs  model.rs  organize.rs  paths.rs  scanner.rs  util.rs  watcher.rs  worker.rs
src/db/: migrations.rs  mod.rs  queries.rs
src/ui/: message.rs  mod.rs  state.rs  style.rs  subscription.rs  thumbnails.rs  update.rs
src/ui/view/: mod.rs  new_project_menu.rs  project_view.rs  scratch_dialog.rs  setup_dialog.rs  sidebar.rs  widgets.rs
tests/: child_file_matching.rs  config_generalization.rs  paths.rs  rip_matching.rs  root_sync.rs  seed_detection.rs
