[package]
name = "matr-project-file-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
crossbeam-channel = "0.5.16"
directories = "6.0.0"
dunce = "1.0.5"
eframe = "0.35.0"
egui = "0.35.0"
egui_extras = "0.35.0"
image = "0.25.10"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
open = "5.3.6"
rfd = "0.17.2"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
rusqlite_migration = "2.6.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
walkdir = "2.5.0"
